--- a/Assignment02/src/application/Login.fxml
+++ b/Assignment02/src/application/Login.fxml
@@ -1,19 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #2D3447;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="359.0" layoutY="352.0" mnemonicParsing="false" style="-fx-border-color: black;" text="Signup" />
-      <Button layoutX="359.0" layoutY="395.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="55.0" style="-fx-border-color: black;" text="Login" />
-      <Text fill="#2a00f7" layoutX="175.0" layoutY="120.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Data Analytics Hub" textAlignment="CENTER" wrappingWidth="421.978515625">
+      <Button layoutX="890.0" layoutY="48.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="76.0" style="-fx-border-color: white; -fx-background-color: #2D3447;" text="Sign Up" textFill="WHITE">
          <font>
-            <Font name="Bodoni MT Condensed Italic" size="47.0" />
+            <Font size="14.0" />
+         </font></Button>
+      <Label layoutX="763.0" layoutY="54.0" text="Create new profile" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
          </font>
-      </Text>
+      </Label>
+      <Label layoutX="302.0" layoutY="91.0" text="Data Analytic Hub" textFill="WHITE">
+         <font>
+            <Font size="48.0" />
+         </font>
+      </Label>
+      <Button layoutX="509.0" layoutY="412.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="69.0" style="-fx-border-color: white; -fx-background-color: #2D3447;" text="Log In" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <Label layoutX="369.0" layoutY="418.0" text="Already a member?" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField layoutX="369.0" layoutY="306.0" prefHeight="32.0" prefWidth="262.0" promptText="Username" style="-fx-background-color: #2d3447; -fx-border-color: white;">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <TextField layoutX="369.0" layoutY="351.0" prefHeight="30.0" prefWidth="262.0" promptText="Password" style="-fx-background-color: #2d3447; -fx-border-color: white;">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
    </children>
 </AnchorPane>
