--- a/Assignment02/src/application/Login.fxml
+++ b/Assignment02/src/application/Login.fxml
@@ -12,22 +12,22 @@
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Label layoutX="763.0" layoutY="54.0" text="Create new profile" textFill="WHITE">
+      <Label layoutX="768.0" layoutY="54.0" text="Create new profile" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="302.0" layoutY="91.0" text="Data Analytic Hub" textFill="WHITE">
+      <Label layoutX="298.0" layoutY="125.0" text="Data Analytics Hub" textFill="WHITE">
          <font>
             <Font size="48.0" />
          </font>
       </Label>
-      <Button layoutX="509.0" layoutY="412.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="69.0" style="-fx-border-color: white; -fx-background-color: #2D3447;" text="Log In" textFill="WHITE">
+      <Button layoutX="562.0" layoutY="412.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="69.0" style="-fx-border-color: white; -fx-background-color: #2D3447;" text="Log In" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <Label layoutX="369.0" layoutY="418.0" text="Already a member?" textFill="WHITE">
+      <Label layoutX="432.0" layoutY="418.0" text="Already a member?" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
