--- a/Assignment02/src/application/SignUpWindow.fxml
+++ b/Assignment02/src/application/SignUpWindow.fxml
@@ -1,57 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="550.0" style="-fx-background-color: #2D3447;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="550.0" style="-fx-background-color: #2D3447;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.WindowController">
    <children>
-      <Label layoutX="124.0" layoutY="71.0" text="Sign Up" textFill="WHITE">
+      <Label layoutX="62.0" layoutY="131.0" text="Sign Up" textFill="WHITE">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <TextField layoutX="124.0" layoutY="200.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white;">
+      <TextField layoutX="62.0" layoutY="257.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <Label layoutX="125.0" layoutY="173.0" text="UserName" textFill="WHITE">
+      <Label layoutX="63.0" layoutY="230.0" text="UserName" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField layoutX="124.0" layoutY="284.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white;">
+      <TextField layoutX="62.0" layoutY="341.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <Label layoutX="124.0" layoutY="411.0" text="Password" textFill="WHITE">
+      <Label layoutX="62.0" layoutY="468.0" text="Password" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField layoutX="124.0" layoutY="361.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white;">
+      <TextField layoutX="62.0" layoutY="418.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <Label layoutX="125.0" layoutY="255.0" text="First Name" textFill="WHITE">
+      <Label layoutX="63.0" layoutY="312.0" text="First Name" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField layoutX="124.0" layoutY="438.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white;">
+      <TextField layoutX="62.0" layoutY="495.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <Label layoutX="125.0" layoutY="335.0" text="Last Name" textFill="WHITE">
+      <Label layoutX="63.0" layoutY="392.0" text="Last Name" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
+      <Button layoutX="62.0" layoutY="60.0" mnemonicParsing="false" onAction="#LoginWindow" prefHeight="32.0" prefWidth="74.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="&lt; Back" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <Button layoutX="275.0" layoutY="557.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="74.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Sign Up" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
