--- a/Assignment02/src/application/Login.fxml
+++ b/Assignment02/src/application/Login.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -37,10 +38,15 @@
             <Font size="14.0" />
          </font>
       </TextField>
-      <TextField fx:id="login_password" layoutX="369.0" layoutY="351.0" prefHeight="30.0" prefWidth="262.0" promptText="Password" style="-fx-background-color: #2d3447; -fx-border-color: white; -fx-text-fill: white;">
+      <PasswordField fx:id="login_password" layoutX="369.0" layoutY="351.0" prefHeight="30.0" prefWidth="262.0" promptText="Password" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
          <font>
             <Font size="14.0" />
          </font>
-      </TextField>
+      </PasswordField>
+      <Label fx:id="errorMessage" layoutX="369.0" layoutY="273.0" textFill="#fa0a6f">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
