--- a/Assignment02/src/application/SignUpWindow.fxml
+++ b/Assignment02/src/application/SignUpWindow.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -43,11 +44,6 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="passwordField" layoutX="62.0" layoutY="495.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </TextField>
       <Label layoutX="63.0" layoutY="392.0" text="Last Name" textFill="WHITE">
          <font>
             <Font size="14.0" />
@@ -68,5 +64,10 @@
             <Font size="14.0" />
          </font>
       </Label>
+      <PasswordField fx:id="passwordField" layoutX="62.0" layoutY="495.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </PasswordField>
    </children>
 </AnchorPane>
