--- a/Assignment02/src/application/Profile.fxml
+++ b/Assignment02/src/application/Profile.fxml
@@ -9,97 +9,102 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #2D3447;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #2D3447;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ProfileController">
    <children>
       <Label layoutX="189.0" layoutY="51.0" text="profile" textFill="WHITE">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <TextField fx:id="usernameField" layoutX="97.0" layoutY="222.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
+      <TextField fx:id="usernameField" layoutX="97.0" layoutY="256.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <Label layoutX="98.0" layoutY="195.0" text="UserName" textFill="WHITE">
+      <Label layoutX="98.0" layoutY="229.0" text="UserName" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="fNameField" layoutX="97.0" layoutY="306.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
+      <TextField fx:id="fNameField" layoutX="97.0" layoutY="340.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <TextField fx:id="lNameField" layoutX="97.0" layoutY="383.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
+      <TextField fx:id="lNameField" layoutX="97.0" layoutY="417.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <Label layoutX="98.0" layoutY="277.0" text="First Name" textFill="WHITE">
+      <Label layoutX="98.0" layoutY="311.0" text="First Name" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="98.0" layoutY="357.0" text="Last Name" textFill="WHITE">
+      <Label layoutX="98.0" layoutY="391.0" text="Last Name" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Button layoutX="66.0" layoutY="61.0" mnemonicParsing="false" onAction="#LoginWindow" prefHeight="32.0" prefWidth="74.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="&lt; Back" textFill="WHITE">
+      <Button layoutX="66.0" layoutY="61.0" mnemonicParsing="false" onAction="#Dashboard" prefHeight="32.0" prefWidth="74.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="&lt; Back" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <Button layoutX="292.0" layoutY="450.0" mnemonicParsing="false" onAction="#Signup" prefHeight="32.0" prefWidth="92.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Confirm" textFill="WHITE">
+      <Button layoutX="292.0" layoutY="484.0" mnemonicParsing="false" onAction="#editProfile" prefHeight="32.0" prefWidth="92.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Confirm" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <Button layoutX="761.0" layoutY="450.0" mnemonicParsing="false" onAction="#Signup" prefHeight="32.0" prefWidth="92.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Confirm" textFill="WHITE">
+      <Button layoutX="761.0" layoutY="484.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="92.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Confirm" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <Label layoutX="566.0" layoutY="195.0" text="Password" textFill="WHITE">
+      <Label layoutX="566.0" layoutY="229.0" text="Password" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <PasswordField fx:id="passwordField" layoutX="566.0" layoutY="222.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
+      <PasswordField fx:id="passwordField" layoutX="566.0" layoutY="256.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
          <font>
             <Font size="14.0" />
          </font>
       </PasswordField>
-      <Label layoutX="566.0" layoutY="277.0" text="New Password" textFill="WHITE">
+      <Label layoutX="566.0" layoutY="311.0" text="New Password" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <PasswordField fx:id="newPasswordField" layoutX="566.0" layoutY="306.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
+      <PasswordField fx:id="newPasswordField" layoutX="566.0" layoutY="340.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
          <font>
             <Font size="14.0" />
          </font>
       </PasswordField>
-      <Label layoutX="567.0" layoutY="357.0" text="Re-Enter Password" textFill="WHITE">
+      <Label layoutX="567.0" layoutY="391.0" text="Re-Enter Password" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <PasswordField fx:id="newPasswordField2" layoutX="566.0" layoutY="383.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
+      <PasswordField fx:id="newPasswordField2" layoutX="566.0" layoutY="417.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
          <font>
             <Font size="14.0" />
          </font>
       </PasswordField>
-      <Line endX="-35.0" endY="321.0" layoutX="511.0" layoutY="194.0" startX="-35.0" startY="-68.0" stroke="WHITE" />
-      <Label layoutX="98.0" layoutY="136.0" text="Change Details" textFill="WHITE">
+      <Line endX="-35.0" endY="321.0" layoutX="511.0" layoutY="228.0" startX="-35.0" startY="-68.0" stroke="WHITE" />
+      <Label layoutX="98.0" layoutY="170.0" text="Change Details" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="567.0" layoutY="136.0" text="Change Password" textFill="WHITE">
+      <Label layoutX="567.0" layoutY="170.0" text="Change Password" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="errorMessage" layoutX="98.0" layoutY="131.0" textFill="#ff007f">
+         <font>
+            <Font size="14.0" />
          </font>
       </Label>
    </children>
