--- a/Assignment02/src/application/Dashboard.fxml
+++ b/Assignment02/src/application/Dashboard.fxml
@@ -12,11 +12,6 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button layoutX="66.0" layoutY="57.0" mnemonicParsing="false" onAction="#LoginWindow" prefHeight="27.0" prefWidth="74.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="&lt; Back" textFill="WHITE">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
       <Button layoutX="829.0" layoutY="103.0" mnemonicParsing="false" onAction="#EditProfile" prefHeight="35.0" prefWidth="106.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Edit profile" textFill="WHITE">
          <font>
             <Font size="14.0" />
@@ -47,7 +42,7 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="845.0" layoutY="480.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="74.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Log Out" textFill="WHITE">
+      <Button layoutX="845.0" layoutY="480.0" mnemonicParsing="false" onAction="#logout" prefHeight="32.0" prefWidth="74.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Log Out" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
