--- a/Assignment02/src/application/Profile.fxml
+++ b/Assignment02/src/application/Profile.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #2D3447;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ProfileController">
    <children>
       <Label layoutX="189.0" layoutY="51.0" text="profile" textFill="WHITE">
@@ -56,7 +55,7 @@
             <Font size="14.0" />
          </font>
       </Button>
-      <Button layoutX="761.0" layoutY="484.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="92.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Confirm" textFill="WHITE">
+      <Button layoutX="761.0" layoutY="484.0" mnemonicParsing="false" onAction="#changePassword" prefHeight="32.0" prefWidth="92.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Confirm" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
