--- a/Assignment02/src/application/Dashboard.fxml
+++ b/Assignment02/src/application/Dashboard.fxml
@@ -2,50 +2,64 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #2d3447;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.DashboardController">
    <children>
-      <Label fx:id="welcomeText" layoutX="200.0" layoutY="56.0" text="Welcome" textFill="WHITE">
+      <Label fx:id="welcomeText" layoutX="116.0" layoutY="118.0" text="Welcome" textFill="WHITE">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button layoutX="829.0" layoutY="103.0" mnemonicParsing="false" onAction="#EditProfile" prefHeight="35.0" prefWidth="106.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Edit profile" textFill="WHITE">
+      <Button layoutX="625.0" layoutY="54.0" mnemonicParsing="false" onAction="#EditProfile" prefHeight="35.0" prefWidth="100.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Edit profile" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <Button layoutX="119.0" layoutY="200.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Add post" textFill="WHITE">
+      <Button layoutX="121.0" layoutY="207.0" mnemonicParsing="false" onAction="#addPost" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Add post" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="366.0" layoutY="200.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Find post" textFill="WHITE">
+      <Button layoutX="371.0" layoutY="383.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Retrieve post" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="607.0" layoutY="200.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Remove post" textFill="WHITE">
+      <Button layoutX="621.0" layoutY="383.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Remove post" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="119.0" layoutY="355.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Most liked posts" textFill="WHITE">
+      <Button layoutX="371.0" layoutY="207.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Most liked posts" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="366.0" layoutY="355.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Export post" textFill="WHITE">
+      <Button layoutX="616.0" layoutY="207.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Export post" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="845.0" layoutY="480.0" mnemonicParsing="false" onAction="#logout" prefHeight="32.0" prefWidth="74.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Log Out" textFill="WHITE">
+      <Button layoutX="744.0" layoutY="54.0" mnemonicParsing="false" onAction="#logout" prefHeight="35.0" prefWidth="74.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Log Out" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
+      <TextField fx:id="postIDField" layoutX="110.0" layoutY="417.0" prefHeight="32.0" prefWidth="217.0" promptText="Post ID" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <Label layoutX="110.0" layoutY="460.0" text="Enter Post ID to Retrieve or Remove post" textFill="WHITE" />
+      <Label fx:id="errorMessage" layoutX="110.0" layoutY="504.0" prefHeight="20.0" prefWidth="311.0" textFill="#ff007f">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Line endX="392.0" layoutX="464.0" layoutY="346.0" startX="-375.0" stroke="WHITE" />
    </children>
 </AnchorPane>
