--- a/Assignment02/src/application/Dashboard.fxml
+++ b/Assignment02/src/application/Dashboard.fxml
@@ -14,7 +14,7 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button layoutX="625.0" layoutY="54.0" mnemonicParsing="false" onAction="#EditProfile" prefHeight="35.0" prefWidth="100.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Edit profile" textFill="WHITE">
+      <Button layoutX="625.0" layoutY="54.0" mnemonicParsing="false" onAction="#editProfile" prefHeight="35.0" prefWidth="100.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Edit profile" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
@@ -24,12 +24,12 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="371.0" layoutY="383.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Retrieve post" textFill="WHITE">
+      <Button layoutX="371.0" layoutY="383.0" mnemonicParsing="false" onAction="#RetrievePost" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Retrieve post" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="621.0" layoutY="383.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Remove post" textFill="WHITE">
+      <Button layoutX="621.0" layoutY="383.0" mnemonicParsing="false" onAction="#RemovePost" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Remove post" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
