--- a/Assignment02/src/application/AddPost.fxml
+++ b/Assignment02/src/application/AddPost.fxml
@@ -7,10 +7,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #2D3447;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AddpostsController">
    <children>
-      <Label layoutX="176.0" layoutY="61.0" text="Add Posts" textFill="WHITE">
+      <Label layoutX="176.0" layoutY="61.0" text="Add Post" textFill="WHITE">
          <font>
             <Font size="36.0" />
          </font>
