--- a/Assignment02/src/application/RetrievePost.fxml
+++ b/Assignment02/src/application/RetrievePost.fxml
@@ -3,10 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #2D3447;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.RetrievePostController">
    <children>
@@ -15,66 +13,44 @@
             <Font size="36.0" />
          </font>
       </Label>
-      <TextField fx:id="postIDField" layoutX="111.0" layoutY="186.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </TextField>
-      <Label layoutX="111.0" layoutY="157.0" text="Post ID" textFill="WHITE">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
       <Button layoutX="86.0" layoutY="81.0" mnemonicParsing="false" onAction="#Dashboard" prefHeight="32.0" prefWidth="74.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="&lt; Back" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <TextArea fx:id="contentField" layoutX="111.0" layoutY="281.0" prefHeight="200.0" prefWidth="333.0" style="-fx-control-inner-background: #2D3447; -fx-background-color: #2D3447; -fx-text-fill: white; -fx-border-color: white;" />
-      <Label layoutX="111.0" layoutY="250.0" text="Post Content" textFill="WHITE">
+      <TextArea fx:id="contentField" layoutX="474.0" layoutY="197.0" prefHeight="279.0" prefWidth="455.0" style="-fx-control-inner-background: #2D3447; -fx-background-color: #2D3447; -fx-text-fill: white;">
          <font>
-            <Font size="14.0" />
+            <Font size="18.0" />
+         </font></TextArea>
+      <Label layoutX="474.0" layoutY="154.0" prefHeight="27.0" prefWidth="144.0" text="Post Contents :" textFill="WHITE">
+         <font>
+            <Font size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="authorField" layoutX="595.0" layoutY="186.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
+      <Label fx:id="postIDField" layoutX="132.0" layoutY="187.0" prefHeight="20.0" prefWidth="309.0" textFill="WHITE">
          <font>
-            <Font size="14.0" />
-         </font>
-      </TextField>
-      <Label layoutX="594.0" layoutY="157.0" text="Author" textFill="WHITE">
-         <font>
-            <Font size="14.0" />
+            <Font size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="likesField" layoutX="595.0" layoutY="281.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
+      <Label fx:id="authorField" layoutX="132.0" layoutY="236.0" prefHeight="20.0" prefWidth="287.0" textFill="WHITE">
          <font>
-            <Font size="14.0" />
-         </font>
-      </TextField>
-      <Label layoutX="600.0" layoutY="250.0" text="Likes" textFill="WHITE">
-         <font>
-            <Font size="14.0" />
+            <Font size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="sharesField" layoutX="595.0" layoutY="372.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
+      <Label fx:id="likesField" layoutX="132.0" layoutY="287.0" prefHeight="20.0" prefWidth="287.0" textFill="WHITE">
          <font>
-            <Font size="14.0" />
-         </font>
-      </TextField>
-      <Label layoutX="595.0" layoutY="343.0" text="Shares" textFill="WHITE">
-         <font>
-            <Font size="14.0" />
+            <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="595.0" layoutY="436.0" text="Date &amp; Time (DD/MM/YYYY HH:MM) " textFill="WHITE">
+      <Label fx:id="sharesField" layoutX="132.0" layoutY="343.0" prefHeight="20.0" prefWidth="287.0" textFill="WHITE">
          <font>
-            <Font size="14.0" />
+            <Font size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="dateTimeField" layoutX="595.0" layoutY="465.0" prefHeight="32.0" prefWidth="287.0" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
+      <Label fx:id="dateTimeField" layoutX="132.0" layoutY="400.0" prefHeight="20.0" prefWidth="287.0" textFill="WHITE">
          <font>
-            <Font size="14.0" />
+            <Font size="18.0" />
          </font>
-      </TextField>
+      </Label>
    </children>
 </AnchorPane>
