--- a/Assignment02/src/application/AddPost.fxml
+++ b/Assignment02/src/application/AddPost.fxml
@@ -85,5 +85,10 @@
             <Font size="14.0" />
          </font>
       </TextField>
+      <Button layoutX="796.0" layoutY="54.0" mnemonicParsing="false" onAction="#logout" prefHeight="35.0" prefWidth="74.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Log Out" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
